fix: reduce font size to prevent long words from overflowing on mobile

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -19,7 +19,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    transition: background-color 0.4s ease, border-color 0.4s ease, color 0.4s ease;
+    transition: font-size 0.4s ease, background-color 0.4s ease, border-color 0.4s ease, color 0.4s ease;
 }
 
 a {
@@ -139,30 +139,31 @@ ul {
     border-radius: 2%;
     margin-bottom: 1rem;
     /* margin-left: 2rem; */
-    padding: 1.5rem 3rem 1.5rem 3rem;
+    padding: 1rem 2rem 1rem 2rem;
     position: relative;
+    text-align: center;
 }
 
 .hyy-quote::before {
     color: var(--color-blockquote);
     content: "“";
-    font-size: 6em;
+    font-size: 5em;
     left: 0.25rem;
     position: absolute;
     top: -1.5rem;
-    left: 0rem;
+    left: -0.4rem;
     z-index: -1;
 }
 
 .hyy-quote-content {
     color: var(--color-text);
     font-family: "Song", system-ui, -apple-system, sans-serif;
-    font-size: var(--font-size-p-larger);
+    font-size: var(--font-size-p);
 }
 
 .hyy-quote-translate {
     font-family: "Song", system-ui, -apple-system, sans-serif;
-    font-size: var(--font-size-p);
+    font-size: var(--font-size-p-smaller);
     font-weight: 100;
     /* margin-bottom: 1rem; */
 }
@@ -257,12 +258,13 @@ ul {
     display: inline-block;
     font-weight: 100;
     position: relative;
+    word-break: break-all;
 }
 
 .hyy-tooltip:hover {
     border-bottom: 0px dotted var(--color-border);
     color: var(--color-emphasis);
-    /* font-size: var(--font-size-p-larger-larger); */
+    font-size: var(--font-size-p-larger-larger);
     font-weight: 1000;
 }
 
@@ -277,11 +279,12 @@ ul {
     font-weight: 100;
     left: 50%;
     margin-bottom: 8px;
-    max-width: 200px;
+    max-width: 160px;
     opacity: 0;
     padding: 6px 10px;
     pointer-events: none;
     position: absolute;
+    text-align: left;
     transform: translateX(-50%);
     transition: opacity 0.2s ease;
     visibility: hidden;
