--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -17,10 +17,10 @@
     /* 段落字体大小 */
     --font-size-h1: 2rem;
     --font-size-h2: 1.6rem;
-    --font-size-p: 1.2rem;
-    --font-size-p-smaller: 1rem;
-    --font-size-p-larger: 1.4rem;
-    /* --font-size-p-larger-larger: 1.4rem; */
+    --font-size-p: 1rem;
+    --font-size-p-smaller: 0.9rem;
+    --font-size-p-larger: 1.2rem;
+    --font-size-p-larger-larger: 1.4rem;
     --font-size-li: 1rem;
     --font-size-drop: 2em;
 }
